# notebookllama

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: linting.yaml  release.yaml  test.yaml  type_checking.yaml
src/notebookllama/: Home.py  instrumentation.py  server.py  utils.py
src/notebooklm_clone/: Home.py  audio.py  instrumentation.py  main.py  models.py  server.py  utils.py  workflow.py
src/notebooklm_clone/pages/: 1_Document_Chat.py  2_Observability_Dashboard.py
tests/: test_audio.py  test_models.py  test_sql_engine.py  test_utils.py  test_workflow.py
tools/: create_llama_cloud_index.py  create_llama_extract_agent.py
